--- a/vue_demo15.html
+++ b/vue_demo15.html
@@ -9,7 +9,7 @@
 <body>
 
    <div id = "databinding">
-      <div>VueJS Directive</div>
+      <div v-changeStyle>VueJS Directive</div>
    </div>
 
    <script>
@@ -17,6 +17,8 @@
       Vue.directive("changestyle",{
          bind(e1,binding, vnode) {
             console.log(e1);
+            console.log(binding);
+            console.log(vnode);
             e1.style.color = "red";
             e1.style.fontSize = "30px";
          }
