--- a/vue_demo16.html
+++ b/vue_demo16.html
@@ -9,7 +9,7 @@
 <body>
 
    <div id = "databinding">
-      <div>VueJS Directive</div>
+      <div v-changeStyle="{color:'green'}">VueJS Directive</div>
    </div>
 
    <script>
