--- a/vue_demo3.html
+++ b/vue_demo3.html
@@ -16,7 +16,7 @@
 <body>
 
    <div id = "classbinding">
-      <div class = "">
+      <div :class = "{active:isactive}">
          <b>{{title}}</b>
       </div>
    </div>
